--- a/ko.html
+++ b/ko.html
@@ -29,7 +29,7 @@
         <div
           class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
         >
-          <a href="#"
+          <!-- <a href="#"
             ><img
               src="images/playstore.png"
               alt="Get it on Google Play"
@@ -40,7 +40,7 @@
               src="images/appstore.png"
               alt="Download on the App Store"
               class="h-16 md:h-24"
-          /></a>
+          /></a> -->
         </div>
       </div>
     </div>
