--- a/ko.html
+++ b/ko.html
@@ -1,165 +1,164 @@
 <header id="home" class="pt-48 pb-36">
-  <div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
-    <div class="container mx-auto flex flex-col lg:flex-row items-center">
-      <div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8">
-        <img
-          src="images/playscreen.png"
-          alt="App Preview"
-          class="max-w-full h-auto rounded-lg"
-        />
-      </div>
-      <div class="lg:w-1/2 text-center lg:text-left space-y-16 lg:space-y-48">
-        <div
-          class="flex flex-col lg:flex-row justify-between lg:justify-start items-center space-y-16 lg:space-y-0"
-        >
-          <img
-            src="images/icon.png"
-            alt="체화 Icon"
-            class="h-36 w-36 mt-24 lg:mt-0 lg:h-64 lg:w-64"
-          />
-          <div class="flex flex-col space-y-8 lg:ml-8">
-            <h1 class="text-3xl xl:text-5xl font-semibold">체화</h1>
-
-            <p class="text-xl xl:text-2xl mx-4 lg:mx-0">
-              단어를 내 몸에 새긴다.<br />
-              다회독 학습 스마트 단어장 앱
-            </p>
-          </div>
-        </div>
-        <div
-          class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
-        >
-          <!-- <a href="#"
+	<div class="relative max-w-screen-lg lg:max-w-screen-xl mx-auto">
+		<div class="container mx-auto flex flex-col lg:flex-row items-center">
+			<div class="lg:w-1/2 mb-4 lg:mb-0 lg:mt-8 md:mr-8">
+				<img
+					src="images/playscreen.png"
+					alt="App Preview"
+					class="max-w-full h-auto rounded-lg"
+				/>
+			</div>
+			<div class="lg:w-1/2 text-center lg:text-left space-y-16 lg:space-y-48">
+				<div
+					class="flex flex-col lg:flex-row justify-between lg:justify-start items-center space-y-16 lg:space-y-0"
+				>
+					<img
+						src="images/icon.png"
+						alt="체화 Icon"
+						class="h-36 w-36 mt-24 lg:mt-0"
+					/>
+					<div class="flex flex-col space-y-4 lg:ml-8">
+						<h1 class="text-3xl xl:text-5xl font-semibold">체화</h1>
+						<p class="text-xl xl:text-2xl mx-4 lg:mx-0">
+							<br />
+							다회독 학습 스마트 단어장 앱
+						</p>
+					</div>
+				</div>
+				<div
+					class="flex flex-col lg:flex-row justify-center lg:justify-start items-center lg:items-start gap-8"
+				>
+					<!-- <a href="#"
             ><img
               src="images/playstore.png"
               alt="Get it on Google Play"
               class="h-16 md:h-24"
-          /></a>
-          <a href="#"
-            ><img
-              src="images/appstore.png"
-              alt="Download on the App Store"
-              class="h-16 md:h-24"
           /></a> -->
-        </div>
-      </div>
-    </div>
-  </div>
+					<a href="https://apps.apple.com/kr/app/chehwa/id6695759136?l=ko-KR"
+						><img
+							src="images/appstore.png"
+							alt="Download on the App Store"
+							class="h-16 md:h-20"
+					/></a>
+				</div>
+			</div>
+		</div>
+	</div>
 </header>
 
 <main>
-  <section id="about" class="py-24 lg:py-48 bg-gray-700">
-    <div
-      class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
-    >
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 lg:gap-16">
-        <div
-          class="flex flex-col justify-center items-center md:items-start space-y-16"
-        >
-          <h2
-            class="text-2xl md:text-3xl lg:text-4xl text-white font-semibold tracking-tighter leading-tight"
-          >
-            과학적인 회독 알고리즘
-          </h2>
-          <p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
-            에빙하우스의 망각 곡선 이론을 바탕으로 효율적인 학습 주기를
-            설정하며, 다양한 학습 이론을 토대로 한 커리큘럼을 학습합니다.<br /><br />각
-            챕터를 따라 단어를 반복적으로 학습하여 단어를 잊어버리지 않고
-            오랫동안 기억하도록 돕습니다.
-          </p>
-        </div>
-        <div
-          id="chart-container"
-          class="w-full h-96 flex justify-center items-center"
-        >
-          <canvas id="forgettingCurve" w="2000" height="1200"></canvas>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="features" class="py-24 lg:py-36 bg-white">
-    <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
-      <div class="container mx-auto px-6">
-        <h2
-          class="text-3xl lg:text-5xl font-semibold text-center tracking-tighter mb-12 md:mb-24 lg:mb-32"
-        >
-          More Features
-        </h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 lg:gap-24">
-          <div class="text-center">
-            <img
-              src="svgs/wand-magic-sparkles.svg"
-              alt="Feature 1"
-              class="h-12 w-12 mx-auto mb-6"
-            />
-            <h3 class="text-xl font-semibold mb-2">전문가들의 단어장</h3>
-            <p class="text-xl text-gray-600">
-              공신력 있는 영어 강사, 크리에이터 분들이 엄선한<br />단어장을
-              제공합니다.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/mobile-screen.svg"
-              alt="Feature 2"
-              class="h-12 w-12 mx-auto mb-6"
-            />
-            <h3 class="text-xl font-semibold mb-2">회독 학습 경험</h3>
-            <p class="text-xl text-gray-600">
-              모든 단어를 최대 5회독으로<br />자연스럽게 회독합니다.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/person-arrow-up-from-line.svg"
-              alt="Feature 3"
-              class="h-12 w-12 mx-auto mb-6"
-            />
-            <h3 class="text-xl font-semibold mb-2">메타인지 향상</h3>
-            <p class="text-xl text-gray-600">
-              확실하게 아는 단어를 구분하기 위해<br />간단한 시험으로
-              평가합니다.
-            </p>
-          </div>
-          <div class="text-center">
-            <img
-              src="svgs/circle-arrow-down.svg"
-              alt="Feature 3"
-              class="h-12 w-12 mx-auto mb-6"
-            />
-            <h3 class="text-xl font-semibold mb-2">학습 결과 분석</h3>
-            <p class="text-xl text-gray-600">
-              학습 결과를 추척하여<br />세부적인 분석을 제공합니다.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+	<section id="about" class="py-24 lg:py-48 bg-gray-700">
+		<div
+			class="max-w-screen-lg lg:max-w-screen-xl mx-auto px-4 md:px-6 lg:px-8"
+		>
+			<div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 lg:gap-16">
+				<div
+					class="flex flex-col justify-center items-center md:items-start space-y-16"
+				>
+					<h2
+						class="text-2xl md:text-3xl lg:text-4xl text-white font-semibold tracking-tighter leading-tight"
+					>
+						과학적인 회독 알고리즘
+					</h2>
+					<p class="text-base md:text-lg lg:text-xl text-gray-300 leading-10">
+						에빙하우스의 망각 곡선 이론을 바탕으로 효율적인 학습 주기를
+						설정하며, 다양한 학습 이론을 토대로 한 커리큘럼을 학습합니다.<br /><br />각
+						챕터를 따라 단어를 반복적으로 학습하여 단어를 잊어버리지 않고
+						오랫동안 기억하도록 돕습니다.
+					</p>
+				</div>
+				<div
+					id="chart-container"
+					class="w-full h-96 flex justify-center items-center"
+				>
+					<canvas id="forgettingCurve" w="2000" height="1200"></canvas>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="features" class="py-24 lg:py-36 bg-white">
+		<div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+			<div class="container mx-auto px-6">
+				<h2
+					class="text-3xl lg:text-5xl font-semibold text-center tracking-tighter mb-12 md:mb-24 lg:mb-32"
+				>
+					More Features
+				</h2>
+				<div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 lg:gap-24">
+					<div class="text-center">
+						<img
+							src="svgs/wand-magic-sparkles.svg"
+							alt="Feature 1"
+							class="h-12 w-12 mx-auto mb-6"
+						/>
+						<h3 class="text-xl font-semibold mb-2">전문가들의 단어장</h3>
+						<p class="text-xl text-gray-600">
+							공신력 있는 영어 강사, 크리에이터 분들이 엄선한<br />단어장을
+							제공합니다.
+						</p>
+					</div>
+					<div class="text-center">
+						<img
+							src="svgs/mobile-screen.svg"
+							alt="Feature 2"
+							class="h-12 w-12 mx-auto mb-6"
+						/>
+						<h3 class="text-xl font-semibold mb-2">회독 학습 경험</h3>
+						<p class="text-xl text-gray-600">
+							모든 단어를 최대 5회독으로<br />자연스럽게 회독합니다.
+						</p>
+					</div>
+					<div class="text-center">
+						<img
+							src="svgs/person-arrow-up-from-line.svg"
+							alt="Feature 3"
+							class="h-12 w-12 mx-auto mb-6"
+						/>
+						<h3 class="text-xl font-semibold mb-2">메타인지 향상</h3>
+						<p class="text-xl text-gray-600">
+							확실하게 아는 단어를 구분하기 위해<br />간단한 시험으로
+							평가합니다.
+						</p>
+					</div>
+					<div class="text-center">
+						<img
+							src="svgs/circle-arrow-down.svg"
+							alt="Feature 3"
+							class="h-12 w-12 mx-auto mb-6"
+						/>
+						<h3 class="text-xl font-semibold mb-2">학습 결과 분석</h3>
+						<p class="text-xl text-gray-600">
+							학습 결과를 추척하여<br />세부적인 분석을 제공합니다.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </main>
 
 <section id="contact" class="py-24 lg:py-36 bg-gray-100">
-  <div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
-        Contact
-      </h2>
-      <p class="text-xl md:text-2xl mb-24">
-        아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
-      </p>
-      <a
-        href="mailto:chehwa62@gmail.com"
-        class="inline-block px-6 py-12 md:px-36 md:py-18 lg:px-72 lg:py-36 boder-none border-soild md:border-2 border-gray-300"
-      >
-        <img
-          src="svgs/envelope.svg"
-          alt="Email"
-          class="h-24 w-24 mx-auto mb-4"
-        />
-        <span class="text-lg md:text-2xl text-blue-600 hover:underline"
-          >chehwa62@gmail.com</span
-        >
-      </a>
-    </div>
-  </div>
+	<div class="max-w-screen-lg lg:max-w-screen-xl mx-auto">
+		<div class="container mx-auto px-6 text-center">
+			<h2 class="text-3xl md:text-5xl font-semibold tracking-tighter mb-8">
+				Contact
+			</h2>
+			<p class="text-xl md:text-2xl mb-24">
+				아래 메일로 문의 주시면 빠른 시일 내에 답변드리겠습니다.
+			</p>
+			<a
+				href="mailto:chehwa62@gmail.com"
+				class="inline-block px-6 py-12 md:px-36 md:py-18 lg:px-72 lg:py-36 boder-none border-soild md:border-2 border-gray-300"
+			>
+				<img
+					src="svgs/envelope.svg"
+					alt="Email"
+					class="h-24 w-24 mx-auto mb-4"
+				/>
+				<span class="text-lg md:text-2xl text-blue-600 hover:underline"
+					>chehwa62@gmail.com</span
+				>
+			</a>
+		</div>
+	</div>
 </section>
